# streamly

./: cabal.project  streamly.cabal
.github/workflows/: haskell.yml
benchmark/: README.md  streamly-benchmarks.cabal
benchmark/bench-show/: bench-chart.cabal  default.nix
core/src/Streamly/Internal/Data/Array/: Stream.hs
